--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html {
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
+  background-color: #222;
+  color: #bbb;
 }
 
 body {
